# bevy_android_surface_view

./: .gitignore  README.md  settings.gradle.kts
app/: .gitignore  addr_to_line.py  build.gradle.kts
app/src/androidTest/java/com/rqg/bevy/surface/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  build.sh  native-lib.cpp
app/src/main/java/com/rqg/bevy/surface/: MainActivity.kt  NativeBridge.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/rqg/bevy/surface/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
rust/: Cargo.toml  build.sh
rust/src/: asset.rs  c_api.rs  lib.rs  winit.rs
