[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { path = "/Users/rqg/Playground/bevy" }
winit = "0.28.7"
raw-window-handle = "0.5.2"
ndk = "0.7.0"
ndk-sys = "0.4.1+23.1.7779620"

[lib]
name = "bevy_surface"
crate-type = ["staticlib"]